src/tests/snapshots/fmtm__tests__format__display_math_in_nested_list-2.snap
---
source: src/tests/format.rs
expression: formatted_20
---
- A list.
    - And its
        nested list
        which
        contains a
        display
        math block:
            $$
            \sum_{i=1}^{n} i = \frac{n(n+1)}{2}
            $$

Followed by
a paragraph.
