src/tests/snapshots/fmtm__tests__format__gpt_inline-3.snap
---
source: src/tests/format.rs
expression: formatted_inf
---
# Short Markdown Example

Lorem ipsum dolor sit amet, **consectetur** adipiscing *elit*. Integer nec odio. Praesent **libero**.

## Subheading Level 2

*Sed cursus* ante *dapibus* diam. Sed **nisi**. Nulla quis +sem+ at -nibh- elementum ~imperdiet~. **Duis** sagittis *ipsum*. Praesent **mauris**.

- **Bold** with asterisks: ***strong emphasis***
- *Italic* with underscores: **italic emphasis**
- **Combined** styles: ***bold and italic***

### Subheading Level 3

**In markdown, you can have:**

1. **Ordered lists**
    1. *Nested item 1*
    1. *Nested item 2*
1. **Unordered lists**
    - +List+ item with a plus
    - -List- item with a minus
    - *List* item with an asterisk

> "Blockquote with **bold** and *italic* text." - Famous Quote

```javascript
// Sample code block
function greet() {
    console.log("Hello, Markdown!");
}
```

And here's some `inline code` within a sentence.

**Thanks for reading!**
