src/tests/snapshots/fmtm__tests__format__gpt_inline.snap
---
source: src/tests/format.rs
expression: default_formatted
---
# Short Markdown Example

Lorem ipsum dolor sit amet, **consectetur** adipiscing _elit_.
Integer nec odio. Praesent **libero**.

## Subheading Level 2

*Sed cursus* ante _dapibus_ diam. Sed **nisi**.
Nulla quis +sem+ at -nibh- elementum ~imperdiet~. **Duis** sagittis _ipsum_.
Praesent **mauris**.

- **Bold** with asterisks: ***strong emphasis***
- _Italic_ with underscores: __italic emphasis__
- **Combined** styles: ***bold and italic***

### Subheading Level 3

**In markdown, you can have:**

1. **Ordered lists**
    1. _Nested item 1_
    1. _Nested item 2_
1. **Unordered lists**
    - +List+ item with a plus
    - -List- item with a minus
    - *List* item with an asterisk

> "Blockquote with **bold** and _italic_ text." - Famous Quote

```javascript
// Sample code block
function greet() {
    console.log("Hello, Markdown!");
}
```

And here's some `inline code` within a sentence.

**Thanks for reading!**
