src/tests/snapshots/fmtm__tests__format__hard_breaks-2.snap
---
source: src/tests/format.rs
expression: formatted_20
---
Markdown documents
may contain hard
breaks.\
For example,
the one above.

\
Best,\
You Know Who
