src/tests/snapshots/fmtm__tests__format__hard_breaks-3.snap
---
source: src/tests/format.rs
expression: formatted_inf
---
Markdown documents may contain hard breaks.\
For example, the one above.

\
Best,\
You Know Who
