src/tests/snapshots/fmtm__tests__format__hard_breaks.snap
---
source: src/tests/format.rs
expression: default_formatted
---
Markdown documents may contain hard breaks.\
For example, the one above.

\
Best,\
You Know Who
